[tool.poetry]
name = "clara-peacemaker-bot"
version = "0.1.0"
description = ""
authors = ["kaetaen <kaetaen@tutanota.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pyTelegramBotAPI = "^3.7.4"

[tool.poetry.dev-dependencies]
jedi = "^0.17.2"
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
